# gitignore-util

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/egiti/: _logger.py  cli.py  core.py  egiti.py  manager.py  template_loader.py
src/egiti/core/: exceptions.py  gitignore.py  templates.py
src/egiti/utils/: logger.py
src/gitignore/: __init__.py  gitignore.py
