[project]
name = "egiti"
version = "0.1.0"
description = "A utility for easily managing gitignore files."
readme = "README.md"
authors = [
    { name = "wandderq", email = "wanddr.qq@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "requests>=2.33.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
egiti = "egiti.cli:run_cli"
