[project]
name = "egiti"
version = "0.2.0"
description = "A utility for easily managing gitignore files."
readme = "README.md"
authors = [
    { name = "wandderq", email = "wanddr.qq@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "platformdirs>=4.9.6",
    "requests-toolbelt>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
egiti = "egiti.cli:run_cli"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "B"]
ignore = ["W293", "E701"]
